--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -46,7 +46,7 @@
 
 			<!--single product-->
 
-			<article class="product">
+			<!---<article class="product">
 				<div class="img-container">
 					
 					<img src="4.jpeg" class="product-img">
@@ -57,7 +57,7 @@
 				<h3>queen bed</h3>
 				<h4>$15</h4>
 
-			</article>
+			</article> <!-->
 
 			<!--end of single product-->
 
