--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Shopping Cart</title>
 
-	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+	<script src="https://kit.fontawesome.com/yourcode.js"></script>
+
+
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" type="text/css" href="Shopping.css">
