--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<title>Shopping Cart</title>
 
-	<script src="https://kit.fontawesome.com/yourcode.js"></script>
+	<!--<script src="https://kit.fontawesome.com/yourcode.js"></script>-->
 
 
 	<meta charset="utf-8">
