--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -5,6 +5,7 @@
 	<title>Shopping Cart</title>
 
 	<!--<script src="https://kit.fontawesome.com/yourcode.js"></script>-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 	<meta charset="utf-8">
@@ -15,12 +16,12 @@
 	<nav class="navbar">
 		<div class="navbar-center">
 			<span class="nav-icon">
-				<i class="fas fa-bars"></i>
+				<i class="fa fa-bars"></i>
 				</span>
 				<img src="logo.jpg" alt="mylogo" class="img">
 				<div class="cart-btn">
 				<span class="nav-icon">
-					<i class="fas fa-cart-plus"></i>
+					<i class="fa fa-cart-plus"></i>
 				</span>
 			<div class="cart-items">0</div>
 
@@ -74,7 +75,7 @@
   <div class="cart-overlay">
   <div class="cart">
   	<span class="close-cart">
-  		<i class="fas fa-window-close"></i>
+  		<i class="fa fa-window-close"></i>
   	</span>
   	<h2>your cart</h2> 
   	<div class="cart-content">
@@ -90,9 +91,9 @@
   			</div>
   			<div> 
 
-  			<i class="fas fa-chevron-up"></i>
+  			<i class="fa fa-chevron-up"></i>
   			<p class="item-amount">1</p>
-  			<i class="fas fa-chevron-down"></i>
+  			<i class="fa fa-chevron-down"></i>
   		</div>
 </div>
 
