--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -82,22 +82,11 @@
 
   		<!--cart item-->
 
-  		<div class="cart-item">
-  			<img src="4.jpeg">
-  			<div>
-  				<h4>Chair</h4>
-  				<h5>$10</h5>
-  				<span class="remove-item">remove</span>
-  			</div>
-  			<div> 
+  		<!--<div class="cart-item"
 
-  			<i class="fa fa-chevron-up"></i>
-  			<p class="item-amount">1</p>
-  			<i class="fa fa-chevron-down"></i>
-  		</div>
 </div>
 
-<!--end cart item-->
+--end cart item-->
 
   </div>
 <div class="cart-footer">
